# learning_vulkan

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.bat  run.bat
docker/: Dockerfile.linux  Dockerfile.windows
lib/: attributes.rs  buffer.rs  command.rs  constants.rs  device.rs  fps.rs  framebuffer.rs  image.rs  model.rs  pipeline.rs  render_pass.rs  surface.rs  swapchain.rs  texture.rs  vk_utils.rs
lib/common/: command.rs  depth_image.rs  fence.rs  framebuffers.rs  image_view.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  queue_family_indices.rs  render_pass.rs  semaphore.rs  surface.rs  swapchain.rs  sync.rs
lib/constants/: mod.rs
lib/debug/: mod.rs  validation_layer.rs
lib/tools/: debug.rs  mod.rs
lib/types/: mod.rs  uniform_buffer_object.rs  vertex.rs  vertex2d.rs  vertex_with_texture2d.rs  vertex_with_texture3d.rs
results/: spinning_rainbow_square.mov
shaders/spv/: hello-triangle_vert.spv  triangle.frag.spv  triangle.vert.spv
shaders/src/: hello-triangle.vert  triangle.frag  triangle.vert
src/: hello_triangle_application.rs  loading_models.rs  main.rs  multisampling.rs  textures.rs
