[package]
name = "learning_vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vk_utils"
path = "lib/vk_utils.rs"
crate-type = ["lib"]

[dependencies]
ash = { version = ">= 0.37.0", default_features = false, features = ["linked", "debug"] }
ash-window = ">= 0.12.0"
raw-window-handle = "0.5.0"
winit = ">= 0.26"
num = "0.4.0"
memoffset = ">= 0.6.5"
cgmath = ">= 0.18.0"
image = ">= 0.24.3"
tobj = ">= 3.2.3"

[target.'cfg(target_os = "macos")'.dependencies]
metal = ">= 0.17.0"
cocoa = ">= 0.18.4"
objc = ">= 0.2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = ">= 0.3.5", features = ["windef", "libloaderapi"] }
